# JP-Shuffler-GUI

./: .gitignore  README.md  Uusi tekstiasiakirja.txt  app.py  kanjishuffle.py  pyproject.toml
kanjit/: kanji.txt  kanji2_kun.txt  kanji_merkit.txt  kanji_on.txt
src/: app.py  kanjishuffle.py
src/kanjit/: alkmerkit.txt  kanji2.txt  kanji2_merkit.txt  kanji2_on.txt  kanji_kun.txt
src/utils/: comms.py
src/views/: FileMenu  chopMenu.py  fileMenu.py  kanjiView.py  mainMenu.py  menu.py
